Fix style alignment

--- a/www/styles.css
+++ b/www/styles.css
@@ -950,7 +950,9 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .forward-starting-input > input {
+    margin-top: 0.5rem;
     max-width: 50%;
+    flex: 1 0 auto;
 }
 
 .duration-input input, .duration-input select {
